# telos

./: .dockerignore  .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEPLOYMENT.md  DERIVE.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  SUPABASE.md  TRADEMARK.md  docker-compose.yml  index.html  start.sh
.claude/: launch.json
.github/workflows/: deploy.yml
app/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt  manifest.webmanifest
app/404/: index.html
app/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
app/account/: __next._full.txt  __next._head.txt  (+6 more)
core/: .env.example  README.md  conftest.py  demo.py  derive.py  pyproject.toml  run_tests.py  serve.py
core/telos_core/: __init__.py  bkt.py  diagnosis.py  engine.py  fire.py  frontier.py  fsrs.py  kst.py  llm.py  models.py  prompts.py  seed.py
core/tests/: test_bkt.py  test_diagnosis.py  test_domain.py  test_engine.py  test_fire.py  test_fsrs.py  test_kst.py
docs/: DESIGN.md  HANDOFF.md  IMAGE-PROMPTS.md  ROADMAP.md  STRATEGY.md  SYNERGY.md  tokens.css
landing/: index.html
scripts/: build-pages.sh
skill/: README.md  SKILL.md
web/: .env.example  next.config.ts  package-lock.json  package.json
workers/: check-prompt-parity.mjs  deploy.sh  derive.js  package.json  prompts.js  prompts.private.js.example  seed-templates.sh  wrangler.toml
(+915 files in other folders)
